# analise_viagens_brasileiro

./: README.md  analise_km_brasileirao.ipynb  arena_coords.csv  data.csv  estado_coords.csv  main.py  pyproject.toml
